# binaryalign

./: .gitignore  README.md  environment.yml  mplm.py  pyproject.toml  utf.sh
configs/: test.yml  train.yml
datasets/: links.md
scripts/: train.sh
src/binaryalign/: test.py  train.py
src/binaryalign/data/: collate.py  dataset.py
src/binaryalign/data/utils/: prepare.py
src/binaryalign/inference/: align.py
src/binaryalign/models/: backbone.py  model.py
src/binaryalign/tokenization/: tokenizer.py
src/binaryalign/training/: trainer.py
wandb/: latest-run
